--- a/src/app/header/searchbar/searchbar.component.html
+++ b/src/app/header/searchbar/searchbar.component.html
@@ -4,6 +4,6 @@
         <i class="fa-solid fa-magnifying-glass"></i>
     </button>
     <div style="padding-left: 10px;">
-        <img src="assets/tune.png" height="33px" width="33px">
+        <img src="assets/tune.png" height="33px" width="33px" (click)="tempSignOut()">
     </div>
 </div>
