--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 <h2>Profile</h2>
-<form method="get" action="" autocomplete="on">
+<form #editProfile="ngForm" (ngSubmit)="onSubmit()" autocomplete="on">
   <div class="wrapper">
     <!-- Name and Major -->
     <section class="field-wrapper-horizintal">
@@ -14,7 +14,8 @@
           [disabled]="!isEditMode"
           pattern="[A-Za-z]+"
           title="Please enter only alphabetic characters"
-          value="Hassan"
+          name="firstName"
+          [(ngModel)]="params.firstName"
         />
       </div>
       <!-- Last Name -->
@@ -28,7 +29,8 @@
           [disabled]="!isEditMode"
           pattern="[A-Za-z]+"
           title="Please enter only alphabetic characters"
-          value="alsayhah"
+          name="lastName"
+          [(ngModel)]="params.lastName"
         />
       </div>
       <!-- Major -->
@@ -42,7 +44,8 @@
           [disabled]="!isEditMode"
           pattern="[A-Za-z]+"
           title="Please enter academic major's code"
-          value="SCS"
+          name="major"
+          [(ngModel)]="params.major"
         />
       </div>
     </section>
@@ -60,7 +63,8 @@
           [disabled]="!isEditMode"
           pattern="\+\d{1,3} \d{1,10}"
           title="Please enter valid phone number. e.g. +966 000000000"
-          value="+966 576356393"
+          name="phoneNumber"
+          [(ngModel)]="params.phoneNumber"
         />
       </div>
       <!-- Email -->
@@ -72,7 +76,8 @@
           maxlength="30"
           class="form-control contact"
           disabled
-          value="s201967890@kfupm.edu.sa"
+          name="email"
+          [(ngModel)]="params.email"
         />
       </div>
     </section>
@@ -91,7 +96,8 @@
             class="form-control contact"
             [disabled]="!isEditMode"
             pattern="[A-Za-z ]+"
-            value="Artificial intelligence"
+            name="specialization"
+          [(ngModel)]="params.specialization"
           />
         </div>
 
@@ -101,6 +107,8 @@
           <textarea
             id="skills"
             type="text"
+            name="skills"
+          [(ngModel)]="params.skills"
             class="textarea skills"
             [disabled]="!isEditMode"
             rows="5"
@@ -116,6 +124,8 @@
         <textarea
           id="about"
           type="text"
+          name="about"
+          [(ngModel)]="params.about"
           class="textarea about"
           [disabled]="!isEditMode"
           rows="7"
@@ -136,6 +146,8 @@
           type="text"
           class="form-control links"
           [disabled]="!isEditMode"
+          name="links"
+          [(ngModel)]="params.links"
         />
       </div>
     </section>
