--- a/src/app/student-view/student-view.component.html
+++ b/src/app/student-view/student-view.component.html
@@ -2,7 +2,7 @@
   <div class="row mb-3">
     <div *ngFor="let card of cards.slice(0, visibleCardCount); let i=index" class="col-md-6" [@fadeInOut]>
       <student-card [card]="card" [modalId]="'pop-up'+i"></student-card>
-      <pop-up [info]="card" [type]="'Student'" [modalId]="'pop-up'+i"></pop-up>    
+      <pop-up [info]="card" [type]="card.type" [modalId]="'pop-up'+i"></pop-up>
     </div>
   </div>
   <div class="text-center" *ngIf="showMore">
