integrated with responsive homeview + navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--Insert navbar component-->
-<app-header></app-header>
+<navbarheader></navbarheader>
 <!-- The routed views render in the <router-outlet>-->
 <router-outlet></router-outlet>
 <app-footer></app-footer>
