--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,78 +1,35 @@
-<footer>
-    <div class="container">
-      <div class="row">
-  
-        <!-- First Column -->
-        <div class="col-md-3">
-          <div class="row">
-            <div class="col">
-              <!-- First Row Content -->
-              <p>Capstone Comrades</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col">
-              <!-- Second Row Content -->
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed beatae, nihil similique ipsam, quibusdam ab quo a eos</p>
-            </div>
-          </div>
-        </div>
-  
-        <!-- Second Column -->
-        <div class="col-md-3">
-          <div class="row">
-            <div class="col text-center">
-              <!-- First Row Content -->
-              <p>Terms of Service</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col text-center">
-              <!-- Second Row Content -->
-              <p>Read</p>
-            </div>
-          </div>
-        </div>
-  
-        <!-- Third Column -->
-        <div class="col-md-3">
-          <div class="row">
-            <div class="col text-center">
-              <!-- First Row Content -->
-              <p>Contact Us</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col text-center">
-              <!-- Second Row Content -->
-              <p>Email</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col text-center">
-              <!-- Third Row Content -->
-              <p>Twitter</p>
-            </div>
-          </div>
-        </div>
-  
-        <!-- Fourth Column -->
-        <div class="col-md-3">
-          <div class="row">
-            <div class="col text-center">
-              <!-- First Row Content -->
-              <p>About us</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col text-center">
-              <!-- Second Row Content -->
-              <p>Our Team</p>
-            </div>
-          </div>
-        </div>
-  
+<!-- Footer -->
+<footer id="footer" class="mt-5 bg-dark border-top border-secondary">
+  <div class="container text-light mt-3 justify-content-center">
+    <div class="row">
+      <div class="col-12 col-lg-3 text-center text-lg-start">
+        <h6 class="">KFUPM Soccer</h6>
+        <p class="text-secondary">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed beatae,
+          nihil similique
+        </p>
+      </div>
+      <div class="col-12 col-lg-3 text-center">
+        <h6 class="">Terms of Service</h6>
+        <li class="list-unstyled">
+          <a href="#" class="link-secondary text-decoration-none">Read</a>
+        </li>
+      </div>
+      <div class="col-12 col-lg-3 text-center pt-3 pt-lg-0">
+        <h6 class="">Contact Us</h6>
+        <li class="list-unstyled">
+          <a href="#" class="link-secondary text-decoration-none">Email</a>
+        </li>
+        <li class="list-unstyled">
+          <a href="#" class="link-secondary text-decoration-none">Twitter</a>
+        </li>
+      </div>
+      <div class="col-12 col-lg-3 text-center pt-3 pt-lg-0">
+        <h6 class="">About Us</h6>
+        <li class="list-unstyled">
+          <a href="#" class="link-secondary text-decoration-none">Our Team</a>
+        </li>
       </div>
     </div>
+  </div>
 </footer>
-  
