--- a/src/app/header/navbar/navbar.component.html
+++ b/src/app/header/navbar/navbar.component.html
@@ -1,13 +1,116 @@
-<nav>
-  <ul class="navMenu">
-    <li *ngFor='let item of navList'>
-      <a
-        routerLink={{item.path}}
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-      >
-      {{item.name}}
-      </a>
-    </li>
-  </ul>
+<!-- Navigation Bar -->
+<nav
+  class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-secondary mb-5"
+>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Capstone Comrades</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="navbar-collapse justify-content-center">
+        <form class="d-none d-lg-flex">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Write a project's name"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-success" type="submit">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="28"
+              fill="currentColor"
+              class="bi bi-search"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"
+              />
+            </svg>
+          </button>
+          <a class="link-secondary" href="#"
+            ><img class="ms-1" src="assets\tune.svg" alt=""
+          /></a>
+        </form>
+      </div>
+      <!--Generating the navbar items dynamically-->
+      <div class="navbar-collapse justify-content-end">
+        <ul class="navbar-nav me-1 mb-2 mb-lg-0">
+          <!--Display for USERNAME item in signedin state-->
+          <li class="nav-item dropdown" *ngIf="signedIn">
+            <a
+              class="nav-link dropdown-toggle"
+              id="navbarDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              {{userName}}
+            </a>
+            <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+              <li>
+                <a
+                class="dropdown-item text-secondary bg-dark"
+                routerLink="profile"
+                routerLinkActive="active"
+                ariaCurrentWhenActive="page"
+                  >Profile</a
+                >
+              </li>
+              <li><hr class="dropdown-divider text-secondary" /></li>
+              <li>
+                <a
+                class="dropdown-item text-secondary bg-dark"
+                routerLink="teams"
+                routerLinkActive="active"
+                ariaCurrentWhenActive="page"
+                  >Team</a
+                >
+              </li>
+              <li><hr class="dropdown-divider text-secondary" /></li>
+              <li>
+                <a
+                class="dropdown-item text-secondary bg-dark"
+                routerLink="show-requests"
+                routerLinkActive="active"
+                ariaCurrentWhenActive="page"
+                  >Requests</a
+                >
+              </li>
+              <li><hr class="dropdown-divider text-secondary" /></li>
+              <li>
+                <a
+                class="dropdown-item text-secondary
+                bg-dark"
+                (click)="signOutNav()"
+                  >Logout</a
+                >
+              </li>
+            </ul>
+          </li>
+          <!--Generate the rest of the nav items-->
+          <li class="nav-item" *ngFor="let item of navList">
+            <a
+              class="nav-link"
+              routerLink="{{ item.path }}"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+            >
+              {{ item.name }}
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </nav>
