--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,103 @@
-<div id="mainContent">
-  <div class="topBar">
-    <div class="topBarText">
-      <h1>{{ title }}</h1>
-      <p>{{ description }}</p>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<!--Homeview contnet-->
+<body class="bg-dark wrapper d-flex flex-column min-vh-100">
+  <!-- The title, desceribtion, image -->
+  <div class="container flex-grow-1 justify-content-center">
+    <div
+      class="row align-items-center justify-content-center shadow-lg rounded border border-secondary p-4 dd"
+    >
+      <div class="col-6 d-lg-flex align-items-center justify-content-center">
+        <div class="text-center text-lg-start">
+          <h1 class="text-success">Capstone Comrades</h1>
+          <p class="text-secondary lead">
+            Your best destination to form or join your Capstone Project Team
+          </p>
+        </div>
+        <div
+          class="d-flex align-items-center justify-content-center mt-4 mt-lg-0 ps-lg-3"
+        >
+          <img
+            class="justify-content-center"
+            src="assets\undraw_team_re_0bfe 1.svg"
+            alt=""
+          />
+        </div>
+      </div>
     </div>
-    <img src="assets/topBar_image.png" width="180px" height="180px" />
   </div>
-  <section class="timeLineSection">
-    <h2>Timeline</h2>
-    <div class="timeLineBox"></div>
-  </section>
-  <h2>Past Projects</h2>
-  <section class="pastProjectSection">
-    <!--Creating the pastproject card dynamically-->
-    <div class="pastProjectCard" *ngFor="let project of pastProjects">
-      <p>{{ project }}</p>
+  <!-- Timeline -->
+  <div class="container mt-3 mt-lg-5 text-center text-lg-start">
+    <h1 class="text-light">Timeline</h1>
+    <div
+      class="d-flex align-items-center justify-content-center mt-3 shadow-lg rounded border border-secondary p-5 dd"
+    >
+      <img
+        class="justify-content-center col-10 img-fluid"
+        src="assets\Group 1.svg"
+        alt=""
+      />
     </div>
-  </section>
-</div>
+  </div>
+  <!-- Past Projects -->
+  <div class="container mt-3 mt-lg-5 text-center text-lg-start">
+    <h1 class="text-light">Past Projects</h1>
+  </div>
+  <div class="d-flex align-items-center justify-content-center">
+    <div
+      class="col-11 row row-cols-1 row-cols-lg-4 d-flex align-items-center justify-content-center mt-1"
+    >
+      <div class="col-9 col-lg-3">
+        <a class="text-decoration-none link-unstyled" href="#">
+          <div class="card bg-dark shadow-lg border border-secondary">
+            <img src="assets\sdsd.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title text-light text-center">Robot 1</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-9 col-lg-3">
+        <a class="text-decoration-none link-unstyled" href="#">
+          <div
+            class="card bg-dark shadow-lg border border-secondary mt-3 mt-lg-0"
+          >
+            <img src="assets\sdsd.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title text-light text-center">Robot 2</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-9 col-lg-3">
+        <a class="text-decoration-none link-unstyled" href="#">
+          <div
+            class="card bg-dark shadow-lg border border-secondary mt-3 mt-lg-0"
+          >
+            <img src="assets\sdsd.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title text-light text-center">Robot 3</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-9 col-lg-3">
+        <a class="text-decoration-none link-unstyled" href="#">
+          <div
+            class="card bg-dark shadow-lg border border-secondary mt-3 mt-lg-0"
+          >
+            <img
+              class="shadow-lgj"
+              src="assets\sdsd.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title text-light text-center">Robot 4</h5>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+</body>
