--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
   <div class="container text-light mt-3 justify-content-center">
     <div class="row">
       <div class="col-12 col-lg-3 text-center text-lg-start">
-        <h6 class="">KFUPM Soccer</h6>
+        <h6 class="">Capstone Comrades</h6>
         <p class="text-secondary">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed beatae,
           nihil similique
