--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -1,4 +1,4 @@
-h1 {
+/* h1 {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -40,13 +40,10 @@ input {
     justify-content: space-between;
 }
 
-.container {
-    margin-top: 100px;
-    border-radius: 40px;
-    background: #9FA2A8;
-    box-shadow: -55px -51px 4px 10px rgba(0, 0, 0, 0.50);
-}
 
 .forgotPass {
     float: left;
-}
+} */
+
+
+ 
