--- a/src/app/signup-submit/signup-submit.component.css
+++ b/src/app/signup-submit/signup-submit.component.css
@@ -1,4 +1,4 @@
-h1 {
+/* h1 {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -85,4 +85,4 @@ overflow: auto;
 .popup{
     width: 70%;
 }
-}
+} */
