--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,4 +1,4 @@
-h1 {
+/* h1 {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -51,4 +51,5 @@ h1 {
     border-radius: 40px;
     background: #9FA2A8;
     box-shadow: -55px -51px 4px 10px rgba(0, 0, 0, 0.50);
-}
+} */
+
