--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,45 +1,114 @@
+<div class="container mt-5 mb-3 rounded-5" *ngIf="params.showFirst" [ngStyle]="{'background': '#9fa2a8','max-width': isLargeScreen ? '50%' : '90%'}">
+  <p class="text-center text-success display-1 fw-bold">Sign Up</p>
+  <form #signUpForm="ngForm" (ngSubmit)="nextForm()" class="mt-3">
+    <div class="row row-cols-1 row-cols-lg-3 mt-3">
+      <div class="col-lg-4">
+        <div class="form-group text-center">
+          <label for="firstName" class="form-label text-success fw-medium"
+            >First Name</label
+          >
+          <input
+            name="firstName"
+            [(ngModel)]="params.firstName"
+            type="text"
+            class="form-control-lg rounded-pill mx-auto d-block"
+            id="firstName"
+            style="max-width: 100%"
+          />
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="form-group text-center">
+          <label for="lastName" class="form-label text-success fw-medium"
+            >Last Name</label
+          >
+          <input
+            name="lastName"
+            [(ngModel)]="params.lastName"
+            type="text"
+            class="form-control-lg rounded-pill mx-auto d-block"
+            id="lastName"
+            style="max-width: 100%"
+          />
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="form-group text-center">
+          <label for="accountType" class="form-label text-success fw-medium"
+            >Account Type</label
+          >
+          <div class="dropdown">
+            <button
+              class="btn btn-light btn-lg rounded-pill dropdown-toggle mx-auto d-block"
+              type="button"
+              id="dropdownMenuButton"
+              data-bs-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+              style="width: 300px; max-width: 100%;"
+            >
+              Student
+            </button>
+            <div class="dropdown-menu" aria-labelledby="accountTypeDropdown">
+              <a class="dropdown-item" (click)="changeAccountType('Student')"
+                >Student</a
+              >
+              <a class="dropdown-item" (click)="changeAccountType('Mentor')"
+                >Mentor</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row mt-3">
+      <div class="form-group text-center">
+        <label for="email" class="form-label text-success fw-medium">KFUPM Email</label>
+        <input
+          name="email"
+          [(ngModel)]="params.email"
+          type="email"
+          class="form-control-lg rounded-pill mx-auto d-block"
+          id="email"
+          style="max-width: 100%"
+        />
+      </div>
+    </div>
+    <div class="row mt-3">
+      <div class="form-group text-center">
+        <label for="phoneNumber" class="form-label text-success fw-medium"
+          >Phone Number</label
+        >
+        <input
+          name="phoneNumber"
+          [(ngModel)]="params.phoneNumber"
+          type="tel"
+          class="form-control-lg rounded-pill mx-auto d-block"
+          id="phoneNumber"
+          style="max-width:100%;"
+        />
+      </div>
+    </div>
+    <div class="row mt-3 ">
+      <div class="col-lg-12 d-flex justify-content-center">
+        <button
+          type="submit"
+          class="btn btn-success btn-lg rounded-pill btn-lg mb-3 fw-bold fs-4"
+          style="width: 200px;"
+        >
+          Next
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
 <div class="container" *ngIf="params.showFirst">
-    <h1>Sign Up</h1>
-    <form #signUpForm="ngForm" (ngSubmit)="nextForm()">
-      <!--Email box-->
-      <div id="boxWrapper1">
-          <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">First Name</label>
-              <input name="firstName" [(ngModel)]="params.firstName" type="text" class="form-control" id="exampleFormControlInput1" placeholder="First" >
-          </div>
-          <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Last Name</label>
-              <input name="lastName" [(ngModel)]="params.lastName" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Last" >
-          </div>
-          <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Account Type</label>
-              <div class="dropdown">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle='dropdown' aria-haspopup="true" aria-expanded="false">
-                    Student
-                  </button>
-                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" (click)="changeAccountType('Student')">Student</a>
-                    <a class="dropdown-item" (click)="changeAccountType('Mentor')">Mentor</a>
-                  </div>
-              </div>
-          </div>
-      </div>
-
-      <div id="boxWrapper2">
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">KFUPM Email</label>
-          <input name="email" [(ngModel)]="params.email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="s2020XXXXX@kfupm.edu.sa">
-        </div>
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Phone Number</label>
-          <input name="phoneNumber" [(ngModel)]="params.phoneNumber" type="tel" class="form-control" id="exampleFormControlInput1" placeholder="05XXXXXXXX">
-        </div>
-      </div>
-      <div id="btnWrapper">
-        <button type="submit" class="btn btn-success">Next</button>
-      </div>
-    </form>
+  <div class="row">
+    <div class="col text-center">
+    <p class="fw-bold text-secondary d-inline">Already a member?</p> 
+    <p class=" text-center fw-bold text-success d-inline"> Log in</p>
   </div>
-<!--Signup submit form-->
-<app-signup-submit [params]="params" *ngIf="!params.showFirst" (updateView)="updateView($event)"></app-signup-submit>
+  </div>
+</div>
 
+<app-signup-submit [params]="params" *ngIf="!params.showFirst" (updateView)="updateView($event)"></app-signup-submit>
