backend teamview + add team

--- a/src/app/header/navbar/navbar.component.html
+++ b/src/app/header/navbar/navbar.component.html
@@ -71,7 +71,7 @@
               <li>
                 <a
                 class="dropdown-item text-secondary bg-dark"
-                routerLink="teams"
+                routerLink="myteam"
                 routerLinkActive="active"
                 ariaCurrentWhenActive="page"
                   >Team</a
