--- a/src/app/pop-up/pop-up.component.html
+++ b/src/app/pop-up/pop-up.component.html
@@ -59,13 +59,13 @@
 <ng-template #teamContent>
     <p class="bold">Name:</p>{{info.name}}
     <p class="bold">Field:</p>{{info.team}}
-    <p class="bold">Mentor:</p>{{info.date}}
-    <p class="bold">Leader:</p>{{info.date}}
+    <p class="bold">Mentor:</p>{{info.mentor}}
+
 
     <br>
-    <p class="bold">Members:</p> Ali Alqutayfi, Daniel Alsadiq, Abdulmohseen AlAli, Hassan Alsayhah.
+    <p class="bold">Members:</p>
     <br>
-    <p class="bold">About:</p>Welcome to Tech Titans! We're a team of developers, designers, and project managers passionate about creating a seamless platform for students to connect and form teams for their final year projects. Our goal is to simplify the team formation process, so students can focus on their projects and achieve academic success.
+    <p class="bold">About:</p>{{info.about}}
 </ng-template>
 
 <ng-template #requestFooter>
