--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 <h2>Profile</h2>
-<form #editProfile="ngForm" (ngSubmit)="onSubmit()" autocomplete="on">
+<form #editProfile="ngForm" autocomplete="on">
   <div class="wrapper">
     <!-- Name and Major -->
     <section class="field-wrapper-horizintal">
