--- a/src/app/my-team/my-team.component.html
+++ b/src/app/my-team/my-team.component.html
@@ -1,79 +1,114 @@
 <div class="container">
-    <ng-container *ngIf= "teamExist; else noTeamView">
-        <div class="row mb-3 d-flex align-items-center justify-content-center">
-            <div class="card">
-                <div class="row g-0">
-                    <div class="col" id="teamPicture">
-                        <img src="assets/tech-titans.png" alt="" class="img-fluid rounded-start" width="342px" height="250px">
-                    </div>
-                    <div class="col">
-                        <div class="card-body">
-                        <!-- Kebab Menu Overlay -->
-                        <div *ngIf="showKebabMenu" class="position-absolute top-0 end-0">
-                            <div class="dropdown">
-                                <button class="btn btn-link text-dark dropdown-toggle" type="button" id="kebabMenu" data-toggle="dropdown-menu" aria-haspopup="true" aria-expanded="false">
-                                    <i class="fas fa-ellipsis-v"></i>
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="kebabMenu">
-                                    <a class="dropdown-item" href="#">Option 1</a>
-                                    <a class="dropdown-item" href="#">Option 2</a>
-                                    <a class="dropdown-item" href="#">Option 3</a>
-                                </div>
-                            </div>
-                        </div>
-                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi quos fugit corporis, reprehenderit soluta facilis veritatis suscipit ab consequuntur, perferendis rerum placeat. Dolor nisi odit iusto unde consequuntur cupiditate alias?</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row mb-3" id="members" >
-            <div *ngFor="let card of cards.slice(0, 7)" class="col-md-6" [@fadeInOut]>
-                    <div id="position">
-                        <p>
-                            Member
-                        </p>
-                    </div>
-                <student-card [card]="card" [showKebabMenu]="true"></student-card>
-            </div>
-        </div>
-    </ng-container>
-    <ng-template #noTeamView>
-            <div class="row mb-5">
-                <div class="form-group">
-                    <label for="teamName"><p class="bold">Team Name </p></label>
-                    <input type="text" class=" input form-control align-top" id="teamName" placeholder="Tech Titans">
-                </div>
-            </div>
-            <div class="row mb-5">
-                <div class="form-group">
-                    <label for="teamName"><p class="bold">Project Field </p></label>
-                    <select class="input form-control" id="teamName">
-                        <option value="option1">IOT</option>
-                        <option value="option2">AI</option>
-                        <option value="option3">Fluid mechanics</option>
-                    </select>
-                </div>
-            </div>
-            <div class="row mb-5">
-                <p class="bold">
-                    Add a picture:
-                </p>
-              <div class="mt-3 image-container" (click)="openFileInput()">
-                <img [src]="selectedImage || 'assets/blank-image.png'" class="img-fluid" alt="Selected Image">
-              </div>
-              <input type="file" id="imageInput" accept="image/*" style="display: none" (change)="onImageSelected($event)">
-            </div>
-            <div class="row mb-5">
-                <div class="form-group">
-                    <label for="textField"><p class="bold">Add Message:</p></label>
-                    <textarea type="text" class="form-control align-top" id="textField" [(ngModel)]="textFieldValue"></textarea>
-                </div>
-            </div>
-            <div class="row mb-5 d-flex justify-content-center align-items-center">
-                <div class="col-auto"> 
-                  <button type="button" class="btn btn-success">Create Team</button>
+  <ng-container *ngIf="teamExist; else noTeamView">
+    <div class="row mb-3 d-flex align-items-center justify-content-center">
+      <div class="card">
+        <div class="row g-0">
+          <div class="col" id="teamPicture">
+            <img
+              src="assets/tech-titans.png"
+              alt=""
+              class="img-fluid rounded-start"
+              width="342px"
+              height="250px"
+            />
+          </div>
+          <div class="col">
+            <div class="card-body">
+              <!-- Kebab Menu Overlay -->
+              <div *ngIf="showKebabMenu" class="position-absolute top-0 end-0">
+                <div class="dropdown">
+                  <button
+                    class="btn btn-link text-dark dropdown-toggle"
+                    type="button"
+                    id="kebabMenu"
+                    data-toggle="dropdown-menu"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  >
+                    <i class="fas fa-ellipsis-v"></i>
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="kebabMenu">
+                    <a class="dropdown-item" href="#">Option 1</a>
+                    <a class="dropdown-item" href="#">Option 2</a>
+                    <a class="dropdown-item" href="#">Option 3</a>
+                  </div>
                 </div>
               </div>
-    </ng-template>
+              <p class="card-text">
+                {{team.about}}]
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row mb-3" id="members">
+      <div *ngFor="let card of cards.slice(0, 7)" class="col-md-6" [@fadeInOut]>
+        <div id="position">
+          <p>Member</p>
+        </div>
+        <student-card [card]="card" [showKebabMenu]="true"></student-card>
+      </div>
+    </div>
+  </ng-container>
+  <ng-template #noTeamView>
+    <form #newTeam="ngForm">
+      <div class="row mb-5">
+        <div class="form-group">
+          <label for="name"><p class="bold">Team Name</p></label>
+          <input
+            type="text"
+            class="input form-control align-top"
+            id="name"
+            placeholder="Tech Titans"
+            name="name"
+            [(ngModel)]="params.name"
+          />
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="form-group">
+          <label for="name"><p class="bold">Project Field</p></label>
+          <select class="input form-control" id="projectField" name="projectField" [(ngModel)]="params.field">
+            <option *ngFor="let topic of engineeringTopics" value={{topic}}>{{topic}}</option>
+          </select>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <p class="bold">Add a picture:</p>
+        <div class="mt-3 image-container" (click)="openFileInput()">
+          <img
+            [src]="selectedImage || 'assets/blank-image.png'"
+            class="img-fluid"
+            alt="Selected Image"
+          />
+        </div>
+        <input
+          type="file"
+          id="imageInput"
+          accept="image/*"
+          style="display: none"
+          (change)="onImageSelected($event)"
+          name="imageInput"
+        />
+      </div>
+      <div class="row mb-5">
+        <div class="form-group">
+          <label for="textField"><p class="bold">About Team:</p></label>
+          <textarea
+            type="text"
+            class="form-control align-top"
+            id="textField"
+            name="about"
+            [(ngModel)]="params.about"
+          ></textarea>
+        </div>
+      </div>
+      <div class="row mb-5 d-flex justify-content-center align-items-center">
+        <div class="col-auto">
+          <button type="button" class="btn btn-success" (click)="onSubmit()">Create Team</button>
+        </div>
+      </div>
+    </form>
+  </ng-template>
 </div>
