--- a/src/app/show-requests/request-card/request-card.component.html
+++ b/src/app/show-requests/request-card/request-card.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div *ngIf="screenSize === 'large'; else cardView" class="row">
     <div class="col-md-2 text-center">
         <p>
             {{request.type}}
@@ -34,3 +34,50 @@
         </a>
     </div>    
 </div>
+
+<ng-template #cardView>
+        <div class="card border border-3 border-secondary mb-3">
+        <a [attr.href]="'#'+modalId" data-bs-toggle="modal" class="text-decoration-none">
+          <div class="card-body bg-dark text-light ">
+            <div class="card-content text-center">
+                <div class="row">
+                    <div class="col-6">
+                        <p class="card-text">
+                            <strong>Type:</strong> {{ request.type }}
+                          </p>
+                          <p class="card-text">
+                            <strong>Date:</strong> {{ request.date }}
+                          </p>
+                    </div>
+                    <div class="col-6">
+                        <p class="card-text">
+                            <strong>Name:</strong> {{ request.name }}
+                          </p>
+                          <p class="card-text">
+                            <strong>Team:</strong> {{ request.team }}
+                          </p>
+                          
+                    </div>
+                </div>
+                
+            </div>
+          </div>
+        </a>
+          <div class="card-footer bg-dark text-light">
+            <ng-container *ngIf="request.status === 'pending'; else statusDisplay">
+                <div class="text-center">
+                    <button class="btn btn-success" (click)="updateStatus('accepted')">Accept</button>
+                    <button class="btn btn-danger" (click)="updateStatus('rejected')">Reject</button>
+                </div>
+              </ng-container>
+              <ng-template #statusDisplay>
+                <div class="text-center">
+                    <strong>{{ request.status }}</strong> 
+                </div>
+              </ng-template>
+            <div class="mt-3" id="popUp">
+
+            </div>
+          </div>
+        </div>
+</ng-template>
